Fix alignment issues with tecnology section

--- a/style.css
+++ b/style.css
@@ -178,11 +178,15 @@ body {
 .program1 {
   display: flex;
   flex-direction: row;
-  gap: 10px;
+  justify-content: space-between;
+  gap: 8px;
   padding-right: 108px;
   padding-left: 28px;
 }
-
+.program1 li {
+  float: left;
+  justify-content: center;
+}
 .works {
   display: flex;
   flex-direction: row;
@@ -190,7 +194,7 @@ body {
 }
 
 .Program-skilhtml {
-  width: 45px;
+  width: 50px;
   height: 24px;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
@@ -202,11 +206,8 @@ body {
   display: flex;
   background-color: rgba(169, 203, 241, 0.8);
   text-align: center;
-  gap: 20px;
   list-style: none;
   border-radius: 8px;
-  flex-direction: row;
-  align-items: center;
   padding: 4px 12px;
 }
 
@@ -226,8 +227,7 @@ body {
   gap: 20px;
   list-style: none;
   border-radius: 8px;
-  flex-direction: row;
-  align-items: center;
+   align-items: center;
   padding: 4px 12px;
 }
 
